--- a/CAA SAT/SAT.UI.MVC/SAT.UI.MVC.csproj
+++ b/CAA SAT/SAT.UI.MVC/SAT.UI.MVC.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SAT.DATA.EF\SAT.DATA.EF.csproj" />
+  </ItemGroup>
+
 </Project>
