--- a/CAA SAT/SAT.UI.MVC/appsettings.Development.json
+++ b/CAA SAT/SAT.UI.MVC/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\sqlexpress;Database=SAT;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
